--- a/package.json
+++ b/package.json
@@ -14,9 +14,9 @@
   "license": "MIT",
   "homepage": "https://bitbucket.org/vsisk/updata#readme",
   "dependencies": {
+    "chalk": "^1.1.1",
     "commander": "^2.9.0",
     "shelljs": "^0.6.0"
   },
-  "devDependencies": {
-  }
+  "devDependencies": {}
 }
