--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "updata",
-  "version": "0.1.0",
-  "description": "utility for updating hg sub-repositories (specifically CSData)",
+  "version": "0.2.0",
+  "description": "utility for updating hg sub-repositories",
   "main": "updata.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
