--- a/package.json
+++ b/package.json
@@ -6,6 +6,9 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
+  "bin" : {
+      "updata": "./updata.js"
+  },
   "repository": {
     "type": "git",
     "url": "git+https://vsisk@bitbucket.org/vsisk/updata.git"
