--- a/package.json
+++ b/package.json
@@ -4,11 +4,13 @@
   "description": "utility for updating hg sub-repositories",
   "main": "updata.js",
   "scripts": {
+    "prebuild": "npm coverage",
     "build": "babel src --out-dir build --source-maps",
     "watch": "babel src --out-dir build --source-maps --watch",
     "start": "node --harmony build/updata.js",
     "preinstall": "npm run build",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "ava src/*.spec.js",
+    "coverage": "nyc npm test"
   },
   "bin": {
     "updata": "./build/updata.js"
@@ -21,14 +23,16 @@
   "license": "MIT",
   "homepage": "https://bitbucket.org/vsisk/updata#readme",
   "dependencies": {
-    "babel-polyfill": "^6.7.2",
-    "chalk": "^1.1.1",
-    "commander": "^2.9.0",
-    "shelljs": "^0.6.0",
-    "source-map-support": "^0.4.0"
+    "babel-polyfill": "6.7.2",
+    "chalk": "1.1.1",
+    "commander": "2.9.0",
+    "shelljs": "0.6.0",
+    "source-map-support": "0.4.0"
   },
   "devDependencies": {
-    "babel-cli": "^6.6.5",
-    "babel-preset-es2015-node5": "^1.2.0"
+    "ava": "0.13.0",
+    "babel-cli": "6.6.5",
+    "babel-preset-es2015-node5": "1.2.0",
+    "nyc": "6.1.1"
   }
 }
