--- a/package.json
+++ b/package.json
@@ -8,15 +8,17 @@
     "watch": "babel src --out-dir bin --source-maps --watch",
     "start": "node --harmony bin/updata.js",
     "prepublish": "npm run build",
-    "test": "ava src/*.spec.js",
-    "check-coverage": "nyc npm test"
+    "test:once": "ava src/*.spec.js",
+    "check-coverage": "nyc npm test:once",
+    "commit": "git-cz",
+    "semantic-release": "semantic-release pre && npm publish && semantic-release post"
   },
   "bin": {
     "updata": "./bin/updata.js"
   },
   "repository": {
     "type": "git",
-    "url": "https://github.com/sappharx/hg-subrepo-updater"
+    "url": "https://github.com/sappharx/hg-subrepo-updater.git"
   },
   "keywords": [
     "hg",
@@ -25,7 +27,10 @@
   ],
   "author": "Vincent Sisk",
   "license": "MIT",
-  "homepage": "https://github.com/sappharx/hg-subrepo-updater",
+  "bugs": {
+    "url": "https://github.com/sappharx/hg-subrepo-updater/issues"
+  },
+  "homepage": "https://github.com/sappharx/hg-subrepo-updater#readme",
   "dependencies": {
     "babel-polyfill": "6.7.2",
     "chalk": "1.1.1",
@@ -37,6 +42,12 @@
     "ava": "0.13.0",
     "babel-cli": "6.6.5",
     "babel-preset-es2015-node5": "1.2.0",
-    "nyc": "6.1.1"
+    "commitizen": "2.7.6",
+    "cz-conventional-changelog": "1.1.5",
+    "nyc": "6.1.1",
+    "semantic-release": "4.3.5"
+  },
+  "czConfig": {
+    "path": "node_modules/cz-conventional-changelog"
   }
 }
