--- a/.travis.yml
+++ b/.travis.yml
@@ -15,7 +15,6 @@ before_install:
 before_script:
   - npm prune
 script:
-  - npm run check-coverage
+  - npm run coverage:check
   - npm run build
 after_success:
-  - npm run semantic-release
