--- a/package.json
+++ b/package.json
@@ -1,17 +1,16 @@
 {
   "name": "updata",
-  "version": "0.0.0-semantically-released",
+  "version": "0.4.3",
   "description": "utility for updating hg sub-repositories",
   "scripts": {
-    "prebuild": "rm -rf bin && npm run check-coverage",
+    "prebuild": "rm -rf bin && mkdir bin",
     "build": "babel src --out-dir bin --source-maps",
     "watch": "babel src --out-dir bin --source-maps --watch",
     "start": "node --harmony bin/updata.js",
-    "prepublish": "npm run build",
+    "prepublish": "npm run coverage:check && npm run build",
     "test:once": "ava src/*.spec.js",
-    "check-coverage": "nyc npm run test:once",
-    "commit": "git-cz",
-    "semantic-release": "semantic-release pre && npm publish && semantic-release post"
+    "coverage:check": "nyc npm run test:once",
+    "commit": "git-cz"
   },
   "bin": {
     "updata": "./bin/updata.js"
@@ -44,8 +43,7 @@
     "babel-preset-es2015-node5": "1.2.0",
     "commitizen": "2.7.6",
     "cz-conventional-changelog": "1.1.5",
-    "nyc": "6.1.1",
-    "semantic-release": "4.3.5"
+    "nyc": "6.1.1"
   },
   "czConfig": {
     "path": "node_modules/cz-conventional-changelog"
