--- a/.travis.yml
+++ b/.travis.yml
@@ -15,6 +15,6 @@ before_install:
 before_script:
   - npm prune
 script:
-  - npm run coverage:check
+  - npm run coverage:report
   - npm run build
 after_success:
