--- a/package.json
+++ b/package.json
@@ -9,7 +9,9 @@
     "start": "node --harmony bin/updata.js",
     "prepublish": "npm run coverage:check && npm run build",
     "test:once": "ava src/*.spec.js",
-    "coverage:check": "nyc npm run test:once",
+    "coverage": "nyc npm run test:once",
+    "coverage:check": "nyc check-coverage --lines 5 --functions 5 --branches 5",
+    "coverage:report": "nyc report --reporter=lcov | coveralls",
     "commit": "git-cz"
   },
   "bin": {
@@ -42,10 +44,17 @@
     "babel-cli": "6.6.5",
     "babel-preset-es2015-node5": "1.2.0",
     "commitizen": "2.7.6",
+    "coveralls": "2.11.9",
     "cz-conventional-changelog": "1.1.5",
     "nyc": "6.1.1"
   },
   "czConfig": {
     "path": "node_modules/cz-conventional-changelog"
+  },
+  "nyc": {
+    "exclude": [
+      "**/*.spec.js",
+      "bin"
+    ]
   }
 }
