--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "coverage:check": "npm run coverage && nyc check-coverage --lines 5 --functions 5 --branches 5",
     "coverage:report": "npm run coverage && npm run coverage:codecov && npm run coverage:coveralls",
     "coverage:codecov": "nyc report --reporter=lcov | codecov",
-    "coverage:coveralls": "nyc report --reporter=lcov | coveralls",
+    "coverage:coveralls": "nyc report --reporter=text-lcov | coveralls",
     "commit": "git-cz"
   },
   "bin": {
