--- a/package.json
+++ b/package.json
@@ -11,8 +11,7 @@
     "test:once": "ava src/*.spec.js",
     "coverage": "nyc npm run test:once",
     "coverage:check": "npm run coverage && nyc check-coverage --lines 5 --functions 5 --branches 5",
-    "coverage:report": "npm run coverage && npm run coverage:codecov && npm run coverage:coveralls",
-    "coverage:codecov": "nyc report --reporter=text-lcov | codecov",
+    "coverage:report": "npm run coverage && npm run coverage:coveralls",
     "coverage:coveralls": "nyc report --reporter=text-lcov | coveralls",
     "commit": "git-cz"
   },
