--- a/package.json
+++ b/package.json
@@ -34,11 +34,9 @@
   },
   "homepage": "https://github.com/sappharx/hg-subrepo-updater#readme",
   "dependencies": {
-    "babel-polyfill": "6.7.2",
     "chalk": "1.1.1",
     "commander": "2.9.0",
-    "shelljs": "0.6.0",
-    "source-map-support": "0.4.0"
+    "shelljs": "0.6.0"
   },
   "devDependencies": {
     "ava": "0.13.0",
