--- a/package.json
+++ b/package.json
@@ -52,8 +52,10 @@
     "eslint-config-airbnb": "7.0.0",
     "nyc": "6.4.0"
   },
-  "czConfig": {
-    "path": "node_modules/cz-conventional-changelog"
+  "config": {
+    "commitizen": {
+      "path": "cz-conventional-changelog"
+    }
   },
   "nyc": {
     "exclude": [
